Implemented _set_param for dashed curves. Not yet working with offset.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-   // "python.pythonPath": "${workspaceFolder}/.venv/bin/python",
-   "editor.foldingMaximumRegions": 100
+   "editor.foldingMaximumRegions": 100,
+   "makefile.configureOnOpen": false
 }
