WIP: GUI performance poor because docker won't allow full gpu passthrough by default. Configuring gets messy...

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Blender runtime files (ignore these)
+# .blender/temp/
+# .blender/cache/
+# .blender/recent-files.txt
+
+# Keep the user preferences template (don't ignore)
+!.blender/config/userpref.blend
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
