--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,5 +1,8 @@
 name: Run Test Suite
 
+env:
+  PYTHON_VERSION: '3.11.9' # Should match version in pyproject.toml
+
 on:
   push:
     branches: [ "**" ]  # Run on all branches
@@ -14,5 +17,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ env.PYTHON_VERSION }} 
+
+    - name: Install anima with dependencies
+      run: |
+        cd anima
+        python -m pip install --upgrade pip
+        pip install .
+
     - name: Run tests
       run: make test
