Refactored project structure to conform to pyproject.toml with src-layout. Moved all tests to separate folder. Fixed run script.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
    "editor.foldingMaximumRegions": 100,
-   "makefile.configureOnOpen": false
+   "makefile.configureOnOpen": false,
+   "python.analysis.extraPaths": [
+      "./src"
+   ]
 }
