--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -22,11 +22,11 @@ jobs:
       with:
         python-version: ${{ env.PYTHON_VERSION }} 
 
-    - name: Install anima with dependencies
-      run: |
-        cd anima
-        python -m pip install --upgrade pip
-        pip install .
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
+
+    - name: Build the anima package
+      run: make build
 
     - name: Run tests
       run: make test
