--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
    "pytest==8.4.0",
    "numpy==2.3.0",
    "mathutils==3.3.0",
-   "pylatexenc==2.10"
+   "pylatexenc==2.10",
+   "loguru==0.7.3",
 ]
 
 [tool.setuptools.packages.find]
