fix: Downgraded numpy to fix incompatibility between bpy and numpy version. Also fixed blender python path format.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,20 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "anima"
 dynamic = ["version"]
-requires-python = "==3.11.9" # Ensure this matches Blender's Python version
+requires-python = "==3.11.9" # Ensure this matches Blender's Python version below
 dependencies = [
    "scipy==1.15.3",
    "bpy==4.4.0",
    "pytest==8.4.0",
-   "numpy==2.3.0",
+   "numpy==1.26.4",
    "mathutils==3.3.0",
    "pylatexenc==2.10",
    "loguru==0.7.3",
    "plastex==3.1",
 ]
+
+[tool.blender]
+python_path = "/home/niran90/Applications/blender/blender-4.3.2-linux-x64/4.3/python/bin/python3.11"
 
 [tool.setuptools.packages.find]
 where = ["src"]
@@ -32,6 +35,3 @@ testpaths = ["tests"]
 addopts = [
     "--ignore=tests/visual_tests/",
 ]
-
-[tool.blender]
-python_path = "~/Applications/blender/blender-4.3.2-linux-x64/4.3/python/bin/python3.11"
