--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "anima"
 dynamic = ["version"]
-requires-python = "==3.11.9" # Ensure this matches Blender's Python version in the next section
+requires-python = "==3.11.9" # Ensure this matches Blender's Python version
 dependencies = [
    "scipy==1.15.3",
    "bpy==4.4.0",
@@ -21,9 +21,6 @@ dependencies = [
 ## Blender-specific configurations
 [tool.blender]
 root-dir = "/home/niran90/Applications/blender/blender-4.3.2-linux-x64"
-
-[tool.blender.python]
-version = "3.11.9"
 
 ## Other tool configurations
 [tool.setuptools.packages.find]
