--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Upgrade pip
       run: python -m pip install --upgrade pip
 
-    - name: Build the anima package
-      run: make build
+    - name: Install the anima package
+      run: make install
 
     - name: Run tests
       run: make test
