fix: Issue with CI trying to install blender dependencies

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -25,6 +25,8 @@ jobs:
 
     - name: Install the anima package
       run: make install
+      env:
+        SKIP_BLENDER_DEPS: 1
 
     - name: Run tests
       run: make test
