--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
    "pylatexenc==2.10",
    "loguru==0.7.3",
    "plastex==3.1",
+   "keyboard==0.13.5",
 ]
 
 ## Blender-specific configurations
