--- a/.github/workflows/test_devcontainer.yml
+++ b/.github/workflows/test_devcontainer.yml
@@ -7,6 +7,10 @@ on:
       - '.github/workflows/*devcontainer.yml'
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   test-devcontainer:
     runs-on: ubuntu-latest
