--- a/.github/workflows/test_devcontainer.yml
+++ b/.github/workflows/test_devcontainer.yml
@@ -7,38 +7,46 @@ on:
       - '.github/workflows/*devcontainer.yml'
   workflow_dispatch:
 
-permissions:
-  contents: read
-  packages: write
-
 jobs:
   test-devcontainer:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: read
     
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
       
+    - name: Install DevContainers CLI
+      run: npm install -g @devcontainers/cli
+
+    - name: Login to GitHub Container Registry
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
     - name: Build and test devcontainer
-      uses: devcontainers/ci@v0.3
-      with:
-        imageName: anima-devcontainer
-        runCmd: |
+      run: |
+        # Start the devcontainer
+        devcontainer up --workspace-folder .
+        
+        # Run tests inside the devcontainer
+        devcontainer exec --workspace-folder . bash -c "
           # Run the devcontainer test script
           bash .devcontainer/test_workspace.sh
           
           # Additional validation: run a quick test to ensure anima works
-          python3 -c "
+          python3 -c '
           try:
               import anima
-              print('✅ Anima import successful')
+              print(\"✅ Anima import successful\")
           except ImportError as e:
-              print(f'❌ Anima import failed: {e}')
+              print(f\"❌ Anima import failed: {e}\")
               exit(1)
-          "
+          '
           
           # Test that make commands work
           make --version
           make --dry-run test
           
-          echo "🎉 DevContainer validation completed successfully!"
+          echo '🎉 DevContainer validation completed successfully!'
+        "
