testing: Devcontainer gh workflow 4

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,8 @@
 # Use the Python 3.11 dev container base image
 FROM mcr.microsoft.com/devcontainers/python:3.11
 
-# Upgrade pip to latest version
-RUN pip install --upgrade pip
+# Upgrade pip to latest version and install build tools
+RUN pip install --upgrade pip setuptools wheel
 
 # Install minimal dependencies to fix libXxf86vm.so.1 and libXi.so.6 errors and basic bpy functionality
 RUN apt-get update && apt-get install -y \
@@ -21,8 +21,10 @@ ENV LIBGL_ALWAYS_SOFTWARE=1
 # Switch to vscode user early to avoid permission issues with pip cache
 USER vscode
 
-# Copy the entire source code first
-COPY --chown=vscode:vscode . .
+# Copy project files
+COPY --chown=vscode:vscode pyproject.toml ./
+COPY --chown=vscode:vscode src/ ./src/
+COPY --chown=vscode:vscode scripts/ ./scripts/
 
-# Install package in editable mode
+# Install package in editable mode with all dependencies
 RUN pip install --user -e .
