--- a/.github/workflows/build_devcontainer.yml
+++ b/.github/workflows/build_devcontainer.yml
@@ -22,13 +22,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set lowercase repository name
+        run: echo "REPO_NAME_LOWER=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
       - name: Build and push to registry
         uses: docker/build-push-action@v5
         with:
           context: .devcontainer
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}/devcontainer:${{ github.ref_name }}
-            ghcr.io/${{ github.repository }}/devcontainer:latest
-          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}/devcontainer:buildcache
-          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}/devcontainer:buildcache,mode=max
+            ghcr.io/${{ env.REPO_NAME_LOWER }}/devcontainer:${{ github.ref_name }}
+            ghcr.io/${{ env.REPO_NAME_LOWER }}/devcontainer:latest
+          cache-from: type=registry,ref=ghcr.io/${{ env.REPO_NAME_LOWER }}/devcontainer:buildcache
+          cache-to: type=registry,ref=ghcr.io/${{ env.REPO_NAME_LOWER }}/devcontainer:buildcache,mode=max
