--- a/.github/workflows/build_devcontainer.yml
+++ b/.github/workflows/build_devcontainer.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
       - '.devcontainer/**'
-      - '.github/workflows/*-devcontainer.yml'
+      - '.github/workflows/*devcontainer.yml'
   workflow_dispatch:
 
 jobs:
