--- a/.github/workflows/test_devcontainer.yml
+++ b/.github/workflows/test_devcontainer.yml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: ["Build DevContainer"]
     types: [completed]
-    branches: [*]  # Trigger on all branches
+    branches: ["*"]
   workflow_dispatch:
 
 jobs:
