--- a/.github/workflows/test_devcontainer.yml
+++ b/.github/workflows/test_devcontainer.yml
@@ -4,7 +4,6 @@ on:
   workflow_run:
     workflows: ["Build DevContainer"]
     types: [completed]
-    branches: ["*"]
   workflow_dispatch:
 
 jobs:
@@ -16,6 +15,8 @@ jobs:
       packages: read
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_sha || github.sha }}
 
       - name: Set lowercase repository name
         run: echo "REPO_NAME_LOWER=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
