--- a/.github/workflows/test_devcontainer.yml
+++ b/.github/workflows/test_devcontainer.yml
@@ -3,6 +3,7 @@ name: Test DevContainer
 on:
   workflow_run:
     workflows: ["Build DevContainer"]
+    branches: ["**"]
     types: [completed]
   workflow_dispatch:
 
