--- a/.github/workflows/test_devcontainer.yml
+++ b/.github/workflows/test_devcontainer.yml
@@ -3,14 +3,13 @@ name: Test DevContainer
 on:
   workflow_run:
     workflows: [Build DevContainer]
-    branches: ["**"]
     types: [completed]
   workflow_dispatch:
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch'
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     permissions:
       contents: read
       packages: read
