testing: Devcontainer gh workflow 17

--- a/.github/workflows/test_devcontainer.yml
+++ b/.github/workflows/test_devcontainer.yml
@@ -4,6 +4,7 @@ on:
   workflow_run:
     workflows: [Build DevContainer]
     types: [completed]
+    branches: ['**']
   workflow_dispatch:
 
 jobs:
