--- a/.github/workflows/test_anima.yml
+++ b/.github/workflows/test_anima.yml
@@ -23,6 +23,14 @@ jobs:
     - name: Upgrade pip
       run: python -m pip install --upgrade pip
 
+    - name: Cache pip dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml', 'src/**/*.py') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Install the anima package
       run: make install
       env:
