--- a/.github/workflows/test_anima.yml
+++ b/.github/workflows/test_anima.yml
@@ -23,15 +23,19 @@ jobs:
     - name: Upgrade pip
       run: python -m pip install --upgrade pip
 
-    - name: Cache pip dependencies
+    - name: Cache Python dependencies
       uses: actions/cache@v4
+      id: cache-deps
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml', 'src/**/*.py') }}
+        path: |
+          ~/.cache/pip
+          ${{ env.pythonLocation }}
+        key: ${{ runner.os }}-python-${{ env.PYTHON_VERSION }}-${{ hashFiles('pyproject.toml') }}
         restore-keys: |
-          ${{ runner.os }}-pip-
+          ${{ runner.os }}-python-${{ env.PYTHON_VERSION }}-
 
     - name: Install the anima package
+      if: steps.cache-deps.outputs.cache-hit != 'true'
       run: make install
 
     - name: Run tests
