--- a/.github/workflows/test_devcontainer.yml
+++ b/.github/workflows/test_devcontainer.yml
@@ -20,32 +20,10 @@ jobs:
       - name: Set lowercase repository name
         run: echo "REPO_NAME_LOWER=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
-      - name: Install DevContainers CLI
-        run: npm install -g @devcontainers/cli
-
       - name: Login to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Pull pre-built devcontainer image
+      - name: Run devcontainer test
         run: |
           IMAGE="ghcr.io/${{ env.REPO_NAME_LOWER }}/devcontainer:${{ github.ref_name }}"
-          docker pull "$IMAGE"
-
-      - name: Configure devcontainer to use pre-built image
-        run: |
-          IMAGE="ghcr.io/${{ env.REPO_NAME_LOWER }}/devcontainer:${{ github.ref_name }}"
-          jq --arg image "$IMAGE" \
-            '.image = $image | del(.build)' \
-            .devcontainer/devcontainer.json > temp.json
-          mv temp.json .devcontainer/devcontainer.json
-
-      - name: Run devcontainer tests
-        run: |
-          devcontainer up --workspace-folder .
-          
-          # Run tests inside the devcontainer
-          devcontainer exec --workspace-folder . bash -c "
-            # Run the devcontainer test script
-            bash .devcontainer/test_workspace.sh
-            echo '🎉 DevContainer validation completed successfully!'
-          "
+          docker run --rm -v "$PWD:/workspace" -w /workspace "$IMAGE" bash .devcontainer/test_workspace.sh
