--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,6 @@
 # Use the Python 3.11 dev container base image
 FROM mcr.microsoft.com/devcontainers/python:3.11
 
-# Upgrade pip to latest version and install build tools
-RUN pip install --upgrade pip setuptools wheel
-
 # Install minimal dependencies to fix libXxf86vm.so.1 and libXi.so.6 errors and basic bpy functionality
 RUN apt-get update && apt-get install -y \
     libxxf86vm1 \
@@ -15,13 +12,18 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# Switch to vscode user early to avoid permission issues with pip cache
+# Create workspace directory
+RUN mkdir -p /workspaces/anima
+
+# Set ownership and permissions of workspace
+RUN chown -R vscode:vscode /workspaces/anima \
+    && chmod -R 755 /workspaces/anima
+
+# Switch to vscode user
 USER vscode
+WORKDIR /workspaces/anima
 
-# Copy project files
-COPY --chown=vscode:vscode pyproject.toml ./
-COPY --chown=vscode:vscode src/ ./src/
-COPY --chown=vscode:vscode scripts/ ./scripts/
-
-# Install package in editable mode with all dependencies
-RUN pip install --user -e .
+# Pre-install common Python packages that are likely to be used
+# The actual project dependencies will be installed when the container starts
+# and the project files are volume mounted
+RUN pip install --user --upgrade pip setuptools wheel
