--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,8 @@
         "context": ".."
     },
 
+    "workspaceFolder": "/workspaces/anima",
+
     "customizations": {
         "vscode": {
             "extensions": [
@@ -32,5 +34,9 @@
 
     "postCreateCommand": "pip install --user -e . --no-deps --force-reinstall",
     
-    "remoteUser": "vscode"
+    "remoteUser": "vscode",
+
+    "runArgs": [
+        "--label", "project=anima"
+    ]
 }
