--- a/.github/workflows/test_anima.yml
+++ b/.github/workflows/test_anima.yml
@@ -1,4 +1,4 @@
-name: Run Anima Test Suite
+name: Test Anima
 
 env:
   PYTHON_VERSION: '3.11.9' # Should match version in pyproject.toml
@@ -7,6 +7,7 @@ env:
 on:
   push:
     branches: [ "**" ]  # Run on all branches
+  workflow_dispatch:
 
 jobs:
   test:
@@ -35,9 +36,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-python-${{ env.PYTHON_VERSION }}-
 
-    - name: Install the anima package
+    - name: Install the anima package in debug mode
       if: steps.cache-deps.outputs.cache-hit != 'true'
-      run: make install
+      run: make install-debug
 
-    - name: Run tests
-      run: make test
+    - name: Run CI checks
+      run: make ci
