--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,15 @@ dependencies = [
    "loguru==0.7.3",
 ]
 
+[project.optional-dependencies]
+dev = [
+   "black>=23.0.0",
+   "isort>=5.12.0",
+   "flake8>=6.0.0",
+   "pylint>=2.17.0",
+   "autopep8>=2.0.0",
+]
+
 ## Other tool configurations
 [tool.setuptools]
 packages.find.where = ["src"]
@@ -36,3 +45,32 @@ testpaths = ["tests"]
 addopts = [
     "--ignore=tests/visual_tests/",
 ]
+
+[tool.black]
+line-length = 88
+target-version = ['py311']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
