--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,16 @@
 {
    "editor.foldingMaximumRegions": 100,
+   "window.zoomLevel": 2,
    "makefile.configureOnOpen": false,
    "python.analysis.extraPaths": [
       "./src"
-   ]
+   ],
+   "black-formatter.args": ["--line-length=88"],
+   "editor.formatOnSave": true,
+   "editor.codeActionsOnSave": {
+      "source.organizeImports": "explicit"
+   },
+   "[python]": {
+      "editor.defaultFormatter": "ms-python.black-formatter"
+   }
 }
