--- a/.github/workflows/test_anima.yml
+++ b/.github/workflows/test_anima.yml
@@ -26,7 +26,7 @@ jobs:
         run: make lint
 
   test:
-    needs: lint
+    # needs: lint
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
